# SpaceCombat

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: resource_manager.h  shader.h  sprite_renderer.h  texture.h
include/game/: ai.h  ai_plane_object.h  bullet_object.h  command.h  game.h  game_object.h  level_loader.h  plane_object.h  round_object.h  weapon.h
include/glad/: glad.h
level/: intro.yaml
source/: glad.c  resource_manager.cpp  shader.cpp  sprite_renderer.cpp  texture.cpp
source/game/: ai.cpp  bullet_object.cpp  command.cpp  game.cpp  game_object.cpp  level_loader.cpp  plane_object.cpp  round_object.cpp  weapon.cpp
